# guiding-df

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOptiX73.cmake
common/cmake/: CompilePTX.cmake
common/configs/: mutable.json
common/configs/nn/: base_hashgrid_nrc_df.json  base_product_df.json
common/configs/render/: guiding_df.json  reference.json
common/configs/scenes/: bathroom.json  bedroom.json  breakfast.json  kitchen.json  salle-de-bain.json  staircase.json  veach-ajar.json
scripts/: run_experiments_cmd.py  run_interactive_cmd.py  run_references_cmd.py
src/: CMakeLists.txt
src/ext/: CMakeLists.txt
src/ext/tcnn/: CMakeLists.txt
src/lib/src/core/: camera.h  scene.cpp  scene.h
src/lib/src/core/device/: atomic.h
src/lib/src/ext/pbrtparser/: CMakeLists.txt
src/lib/src/main/: renderer.cpp  renderer.h
src/lib/src/misc/render/ppg/: integrator.cpp  integrator.h  treemanip.cpp
src/lib/src/render/: shared.h
src/lib/src/render/passes/errormeasure/: errormeasure.cpp  metrics.cu  metrics.h
src/lib/src/render/passes/image_save/: imagesave.cpp  imagesave.h
src/lib/src/render/profiler/: profiler.h
src/lib/src/render/wavefront/: workitem.h  workitem.soa  workqueue.h
src/lib/src/util/: math_utils.h
src/main/: main.cpp
src/render/common/: atomiccolor.h  cuda_util.cpp  cuda_util.h  gl_util.cpp  gl_util.h
src/render/guided/: AR.h  backend.cpp  backend.h  device.cu  guided.h  guideditem.h  guideditem.soa  integrator.cpp  integrator.h  learnedDistribution.cpp  learnedDistribution.h  nrc.cpp  nrc.h  parameters.h  train.cu  train.h  workqueue.h
